--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -39,6 +39,11 @@ es:
     list-motherboards : "Listar placas madre"
     new-motherboard : "Nueva"
 
+    #Harddisks
+    harddisks : "Disco rigido"
+    list-harddisks : "Listar discos"
+    new-harddisk : "Nuevo"
+
   number:
     # Used in number_with_delimiter()
     # These are also the defaults for 'currency', 'percentage', 'precision', and 'human'
