--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -59,6 +59,16 @@ es:
     list-printers : "Listar impresoras"
     new-printer : "Nuevo"
 
+    #Marks
+    marks : "Marcas"
+    list-marks : "Listar marcas"
+    new-mark : "Nueva"
+
+    #Flash
+    flash :
+      login : 'Logueado satisfactoriamente.'
+
+
   number:
     # Used in number_with_delimiter()
     # These are also the defaults for 'currency', 'percentage', 'precision', and 'human'
