--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -14,6 +14,14 @@ es:
     place: "Lugar"
     workstation?: "Puesto?"
 
+  places:
+    title: "Lugar"
+    name: "Nombre"
+
+  motherboards:
+    model: "Modelo"
+    sn: "Numero de Serie"
+
   search:
     label: "Buscar"
 
