--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -18,11 +18,23 @@ es:
   computers:
     title: "Computadoras"
     name: "Nombre"
-    available: "Disponible"
+    stats_paragraph: "En numeros de pc"
+    available: "Disponibles"
+    unavailable: "No disponibles"
+    all : "Total"
+    new: "Agregar nueva pc"
+    action: "Acciones"
+    create: "Agregar"
+    edit: "Editar"
+    show: "Ver"
+    destroy: "Eliminar"
     harddisk: "Disco rigido"
     memory: "Memoria"
     place: "Lugar"
     workstation?: "Puesto?"
+    back: "Regresar"
+    y: "Si"
+    not: "No"
 
   places:
     title: "Lugar"
