--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -62,30 +62,37 @@ es:
   motherboards:
     model: "Modelo"
     sn: "Numero de Serie"
+    mark: "Marca"
 
   harddisks:
     model: "Modelo"
     sn: "Numero de Serie"
+    mark: "Marca"
 
   memories:
     model: "Modelo"
     sn: "Numero de Serie"
+    mark: "Marca"
 
   dvds:
     model: "Modelo"
     sn: "Numero de Serie"
+    mark: "Marca"
 
   cds:
     model: "Modelo"
     sn: "Numero de Serie"
+    mark: "Marca"
 
   screens:
     model: "Modelo"
     sn: "Numero de Serie"
+    mark: "Marca"
 
   printers:
     model: "Modelo"
     sn: "Numero de Serie"
+    mark: "Marca"
 
   search:
     label: "Buscar"
