- Controllers   * added new methods in application controller to calculate     stats google chart data   * adapted computers and places stats methods
- Views and Partials
  * added new translations in partials and views

- Locales
  * added new locales translations

- Specs
  * little changes in specs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -99,6 +99,14 @@ en:
     model: "Model"
     sn: "Serial Number"
 
+  marks:
+    mark: "Mark"
+    new: "New"
+    edit : "Edit"
+    show : "Show"
+    destroy: "Destroy"
+    back: "Back"
+
   common-actions:
     actions: "Actions"
     edit: "Edit"
