- Partials   * added new partial for link to top the document   * little changes adding translations
- Views
  * little changes adding translations

- Locales
  * adding translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,7 @@ en:
     edit: "Edit"
     place: "Place"
     select_a_place: "Select a place"
+    list_of_equipments: 'List of equipments in'
     back: "Back"
 
   computers:
@@ -117,6 +118,7 @@ en:
     destroy: "Destroy"
     show: "Show"
     create: "Create"
+    top-page: "Go to top page"
 
   search:
     label: "Search"
