- Controllers   * refactoring of stats method of computers controller
- Partials
  * deleted partial stats of computers module
  * added new option in menu partial

- Locales
  * added new translates

- Routes
  * added new route 'stats' for computers module

- Layout
  * little changes in computers layout

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -152,6 +152,7 @@ en:
     new-computer : "New"
     availables-computers : "Availables"
     unavailables-computers : "Unavailables"
+    stats-computers: "Statistics"
 
     #MotherBoards
     motherboards : "Motherboards"
