- Controllers   * made a xls method for each componets to download reports
- Views
  * littles changes in view

- Locales
  * added new translations

- Lib
  * refactoring methods in report system library

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -119,6 +119,7 @@ en:
     show: "Show"
     create: "Create"
     top-page: "Go to top page"
+    download: 'Download a xls file'
 
   search:
     label: "Search"
