- Partials   * refactoring and adding translations
- Locales
  * added more translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -134,8 +134,9 @@ en:
     workstation: 'In station'
 
   phrases:
-    list_of : 'List of'
-    units: 'units'
+    list_of : 'List of '
+    units: ' units '
+    has: ' has '
 
   menu:
     #Workstations
