--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -122,6 +122,7 @@ en:
     create: "Create"
     top-page: "Go to top page"
     download: 'Download a xls file'
+    download-all: 'Download all in a xls file'
     show-hide: 'Show/Hide'
 
   search:
