--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -116,6 +116,7 @@ es:
     create: "Agregar"
     top-page: "Ir al inicio de pagina"
     download: 'Descargar un archivo xls'
+    download-all: 'Descargar todo en un archivo xls'
     show-hide: 'Mostrar/Ocultar'
 
   search:
