--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -124,6 +124,11 @@ en:
     download: 'Download a xls file'
     download-all: 'Download all in a xls file'
     show-hide: 'Show/Hide'
+    show-hideadvice: 'Show/Hide advice'
+    hide-advice: 'Hide advice'
+
+  help-phrases:
+    in-workstation: 'This is asigned how a station of work. To change the attribute Place you have to go to the section Workstations.'
 
   search:
     label: "Search"
