--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -124,6 +124,8 @@ es:
   help-phrases:
     in-workstation: 'Este dispositivo esta asignado en una estacion de trabajo.
                     Para cambiar el atributo Lugar debe ir a la seccion Equipos.'
+    stats-in-place: 'Libre: equipos que no forman parte de una estacion de trabajo.
+                    En equipos: integran una estacion de trabajo'
 
 
   search:
