--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,11 +82,13 @@ en:
     model: "Model"
     sn: "Serial Number"
     mark: "Mark"
+    burn: "Burn"
 
   cds:
     model: "Model"
     sn: "Serial Number"
     mark: "Mark"
+    burn: "Burn"
 
   screens:
     title: 'Screens'
