- Controllers   * added edit method in users controller   * added two private methods, load_user and logged_in
- Helpers
  * added method is_admin? to check the user level

- Partials
  * added options to edit user account and generate
    a new account

- Views
  * changes in new and edit views for users

- Locales
  * added translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -151,6 +151,10 @@ en:
     n: 'no'
 
   menu:
+    account : "Your account"
+    new-account : "New account"
+    account-edit : "Edit data of your account"
+
     #Workstations
     workstations : "Workstations"
     list-workstations : "List all workstations"
