- Controllers   * added new method list in users controllers
- Partials
  * added new menu option for list of users
  * added list partial users

- Views
  * refactoring and changes in edit users
  * new view to show list of users
  * added some lines in users new

- Routes
  * added route for users list

- Locales
  * new translations in english and spanish locales

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -151,6 +151,10 @@ en:
     n: 'no'
 
   menu:
+    users: 'Users'
+    users-list: 'List of Users'
+    users-admin?: 'Administrator?'
+
     account : "Your account"
     new-account : "New account"
     account-edit : "Edit data of your account"
