- Hlppers   * added method login_if_someone_is_logged_in
- Partials
  * added shared partial 'login'
  * added call for 'login' partial in menu partial

- Locales
  * added a few translations

- Css
  * added id for login partial styles

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -154,6 +154,7 @@ en:
     users: 'Users'
     users-list: 'List of Users'
     users-admin?: 'Administrator?'
+    user: 'User : '
 
     account : "Your account"
     new-account : "New account"
