- Views   * added translation in new user view
- Locales
  * added new translation for user module

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,11 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  user:
+    confirm-password: 'Confirm password'
+    password: 'Password'
+    language: 'Language'
+
   inventory:
     title: "Inventory"
 
