- Controllers   * little changes in parameters called in report     pdf method
- Views and partials
  * changes in translations code and positions of links

- Locales
  * added translations in english and spanish locales

- Library
  * changes in parameters necesaries in report pdf method

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -128,6 +128,7 @@ en:
     show: "Show"
     create: "Create"
     top-page: "Go to top page"
+    download-pdf: 'Download a pdf file'
     download: 'Download a xls file'
     download-all: 'Download all in a xls file'
     show-hide: 'Show/Hide'
