--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -128,6 +128,7 @@ es:
     show-hide: 'Mostrar/Ocultar'
     show-hide-advice: 'Mostrar/Ocultar aviso'
     hide-advice: 'Ocultar aviso'
+    report-of: 'Informe de '
 
   help-phrases:
     in-workstation: 'Este dispositivo esta asignado en una estacion de trabajo.
