- Partials    * added new data in list of hardisks and memories
-Locales
  * added new translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,6 +82,7 @@ en:
     model: "Model"
     sn: "Serial Number"
     mark: "Mark"
+    size : "Size"
 
   dvds:
     model: "Model"
@@ -112,6 +113,7 @@ en:
   memories:
     model: "Model"
     sn: "Serial Number"
+    size : "Size"
 
   marks:
     mark: "Mark"
@@ -238,4 +240,3 @@ en:
     #Flash
     flash:
       login : 'Logged in succesfully.'
-
