- Partials   * little changes in partials
- View
  * added translation in edit users view

- Locales
  * added translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
     confirm-password: 'Confirm password'
     password: 'Password'
     language: 'Language'
+    edit: "Edit"
 
   inventory:
     title: "Inventory"
