- Module   * new module of companies where is stored the data     about companies of seller of goods
- Specs
  * added specs for modules companies

- Routes
  * added routes of companies

- Migrations
  * added new migrations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -162,6 +162,10 @@ en:
     n: 'no'
 
   menu:
+    companies : "Companies"
+    list-companies : "List of companies"
+    company-new : "New"
+
     users: 'Users'
     users-list: 'List of Users'
     users-admin?: 'Administrator?'
