- Controllers   * added rendering of an especific template
- Locales
  * added new translations for module Company

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,4 +1,11 @@
 es:
+  company:
+    name: 'Nombre'
+    address: 'Direccion'
+    phone: 'Telefono'
+    fax: 'Fax'
+    email: 'Email'
+
   user:
     confirm-password: 'Confirmar clave'
     password: 'Clave'
