--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,13 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  company:
+    name: 'Name'
+    address: 'Address'
+    phone: 'Phone'
+    fax: 'Fax'
+    email: 'Email'
+
   user:
     confirm-password: 'Confirm password'
     password: 'Password'
