--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,15 +1,18 @@
 es:
   company:
-    name: 'Nombre'
-    address: 'Direccion'
-    phone: 'Telefono'
-    fax: 'Fax'
-    email: 'Email'
+    name: "Nombre"
+    address: "Direccion"
+    phone: "Telefono"
+    fax: "Fax"
+    email: "Email"
+    edit: "Editar"
+    create: "Agregar"
+    back: "Regresar"
 
   user:
-    confirm-password: 'Confirmar clave'
-    password: 'Clave'
-    language: 'Idioma'
+    confirm-password: "Confirmar clave"
+    password: "Clave"
+    language: "Idioma"
     edit: "Editar"
 
   inventory:
@@ -25,7 +28,7 @@ es:
     edit: "Modificar"
     place: "Lugar"
     select_a_place: "Seleccione un lugar"
-    list_of_equipments: 'Listado de equipos en'
+    list_of_equipments: "Listado de equipos en"
     back: "Regresar"
 
   computers:
@@ -104,14 +107,14 @@ es:
     burn: "Grabadora"
 
   screens:
-    title: 'Monitores'
+    title: "Monitores"
     model: "Modelo"
     sn: "Numero de Serie"
     mark: "Marca"
     workstation?: "Puesto?"
 
   printers:
-    title: 'Impresoras'
+    title: "Impresoras"
     model: "Modelo"
     sn: "Numero de Serie"
     mark: "Marca"
@@ -132,36 +135,36 @@ es:
     show: "Ver"
     create: "Agregar"
     top-page: "Ir al inicio de pagina"
-    download-pdf: 'Descargar un archivo pdf'
-    download: 'Descargar un archivo xls'
-    download-all: 'Descargar todo en un archivo xls'
-    show-hide: 'Mostrar/Ocultar'
-    show-hide-advice: 'Mostrar/Ocultar aviso'
-    hide-advice: 'Ocultar aviso'
-    report-of: 'Informe de '
+    download-pdf: "Descargar un archivo pdf"
+    download: "Descargar un archivo xls"
+    download-all: "Descargar todo en un archivo xls"
+    show-hide: "Mostrar/Ocultar"
+    show-hide-advice: "Mostrar/Ocultar aviso"
+    hide-advice: "Ocultar aviso"
+    report-of: "Informe de "
 
   help-phrases:
-    in-workstation: 'Este dispositivo esta asignado en una estacion de trabajo.
-                    Para cambiar el atributo Lugar debe ir a la seccion Equipos.'
-    stats-in-place: 'Libre: equipos que no forman parte de una estacion de trabajo.
-                    En equipos: integran una estacion de trabajo'
+    in-workstation: "Este dispositivo esta asignado en una estacion de trabajo.
+                    Para cambiar el atributo Lugar debe ir a la seccion Equipos."
+    stats-in-place: "Libre: equipos que no forman parte de una estacion de trabajo.
+                    En equipos: integran una estacion de trabajo"
 
 
   search:
     label: "Buscar"
 
   stats:
-    available: 'Disponibles'
-    unavailable: 'En uso'
-    alone: 'Libre'
-    workstation: 'En equipos'
+    available: "Disponibles"
+    unavailable: "En uso"
+    alone: "Libre"
+    workstation: "En equipos"
 
   phrases:
-    list_of : 'Lista de '
-    units: ' unidades '
-    has: ' tiene '
-    y: 'si'
-    n: 'no'
+    list_of : "Lista de "
+    units: " unidades "
+    has: " tiene "
+    y: "si"
+    n: "no"
 
 
   menu:
@@ -169,10 +172,10 @@ es:
     list-companies : "Listar empresas"
     company-new : "Nueva"
 
-    users: 'Usuarios'
-    users-list: 'Lista de usuarios'
-    users-admin?: 'Administrador?'
-    user: 'Usuario : '
+    users: "Usuarios"
+    users-list: "Lista de usuarios"
+    users-admin?: "Administrador?"
+    user: "Usuario : "
 
     account : "Su cuenta"
     new-account : "Nueva cuenta"
@@ -242,12 +245,12 @@ es:
 
     #Flash
     flash :
-      login : 'Logueado satisfactoriamente.'
+      login : "Logueado satisfactoriamente."
 
 
   number:
     # Used in number_with_delimiter()
-    # These are also the defaults for 'currency', 'percentage', 'precision', and 'human'
+    # These are also the defaults for "currency", "percentage", "precision", and "human"
     format:
       # Sets the separator between the units, for more precision (e.g. 1.0 / 2.0 == 0.5)
       separator: ","
@@ -378,7 +381,7 @@ es:
     day_names: [Domingo, Lunes, Martes, Miércoles, Jueves, Viernes, Sábado]
     abbr_day_names: [Dom, Lun, Mar, Mie, Jue, Vie, Sab]
 
-    # Don't forget the nil at the beginning; there's no such thing as a 0th month
+    # Don"t forget the nil at the beginning; there's no such thing as a 0th month
     month_names: [~, Enero, Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Setiembre, Octubre, Noviembre, Diciembre]
     abbr_month_names: [~, Ene, Feb, Mar, Abr, May, Jun, Jul, Ago, Set, Oct, Nov, Dic]
     # Used in date_select and datime_select.
