- Controllers   * added destroy method in users controllers
- View and partial
  * added translation

- Locales
  * added translations for company module

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,7 @@ en:
     edit: "Edit"
     create: "Create"
     back: "Back"
+    new: "Add new company"
 
   user:
     confirm-password: "Confirm password"
